Необходимо дработать post_save на связь цвета и размера

--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -11,56 +11,7 @@
 {% block content %}
 	<main>
 
-		<div class="container" id="main-carousel">
-			<div id="carouselExampleIndicators" class="carousel slide col-xl-12 col-lg-12 col-md-12" data-ride="carousel">
-				<ol class="carousel-indicators" style="filter: invert(100%);">
-					<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-					<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-					<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-				</ol>
-				<div class="carousel-inner">
-
-					<div align="center" class="carousel-item active">
-
-						<a href=""><img alt="" src="" height="400"></a>
-
-						<a href=""><img src="" alt="" height="400"></a>
-
-						<div class="carousel-caption">
-
-							<a href=""><p></p></a>
-
-							<a href=""><p></p></a>
-
-						</div>
-					</div>
-
-					<div align="center" class="carousel-item">
-
-						<a href=""><img src="" alt="First slide" height="400"></a>
-
-						<a href=""><img src="" alt="" height="400"></a>
-
-						<div class="carousel-caption">
-
-							<a href=""><p></p></a>
-
-							<a href=""><p></p></a>
-
-						</div>
-					</div>
-
-				</div>
-				<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-					<span class="carousel-control-prev-icon" aria-hidden="true" style="filter: invert(100%);"></span>
-					<span class="sr-only">Previous</span>
-				</a>
-				<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-					<span class="carousel-control-next-icon" aria-hidden="true" style="filter: invert(100%);"></span>
-					<span class="sr-only">Next</span>
-				</a>
-			</div>
-		</div>
+		{% slider_block %}
 
 		<div class="container" id="new-goods-container">
 			<h2 align="center">Акции</h2>
@@ -88,15 +39,7 @@
 		<div class="container" id="news">
 			<h2 align="center"><a href="{% url 'news:news_view' %}">Новости</a></h2>
 
-			<div class="row">
-
-				<div class="col-xl-12 news-item" style="position: relative;">
-					<p><a href=""></a></p>
-					<p class="text-muted"></p>
-					<p><a href="" style="text-decoration: none;">читать далее</a></p>
-				</div>
-
-			</div>
+			{% news_block %}
 
 		</div>
 
