--- a/templates/product/category_detail.html
+++ b/templates/product/category_detail.html
@@ -22,15 +22,15 @@
 
 <div class="container">
 	<div class="row">
-		{% include 'left-info-menu.html' with start_width=4 caption_width=9 %}
+		{% include 'widgets/left-info-menu.html' with start_width=4 caption_width=9 %}
 		<div class="col-xl-8 col-md-8 category-detail">
 			<h1>{{ current_category }}</h1>
 			<div class="row">
 				{% for subcategory in category_products.subtype.all reversed %}
 				<div class="col-xl-4 col-lg-6">
 					<div class="category-detail-item">
-						<a href="{% url 'subcategory_detail_view' current_category.slug subcategory.slug %}"><img alt="{{ subcategory.name }}" src="{{ subcategory.image.url }}" height="200"></a>
-						<p><a href="{% url 'subcategory_detail_view' current_category.slug subcategory.slug %}">{{ subcategory.name }}</a></p>
+						<a href="{% url 'product:subcategory_detail_view' current_category.slug subcategory.slug %}"><img alt="{{ subcategory.name }}" src="{{ subcategory.image.url }}" height="200"></a>
+						<p><a href="{% url 'product:subcategory_detail_view' current_category.slug subcategory.slug %}">{{ subcategory.name }}</a></p>
 					</div>
 				</div>
 				{% endfor %}
