--- a/templates/showroom/showroom.html
+++ b/templates/showroom/showroom.html
@@ -25,41 +25,15 @@
 				<span>Show Room</span>
 			</div>
 			<div class="main-content">
-				<h1>Наш Show Room</h1>
-				<p>
-					Полотенцесушитель – обязательный атрибут ванной комнаты. Задача устройства – поддерживать нормальные параметры температуры, влажности, предотвращать возникновение плесени, грибка, неприятного запаха. Оборудование применяют для сушки белья или полотенец. Важно, чтобы оно удачно смотрелось в интерьере пространства и соответствовало размерам санузла.
-				</p>
-				<p>
-					В нашем интернет-магазине можно приобрести водяные полотенцесушители и электрические радиаторы «Маргроид», которые различаются по способу подключения. Предлагаем модели:
-					<ul>
-						<li>С боковым подключением. Самый распространенный вид отопительного оборудования. При монтаже не требуется менять конструкцию водопроводоной сети, прокладывать дополнительные трубы или врезать батарею в стояк. Целостность стен не будет нарушена. Установить полотенцесушитель можно после чернового ремонта. Он надежный, почти не подвержен протечкам. Располагают с левой или с правой стороны трубы.</li>
-						<li>С прямым подключением. Модели обладают точной геометрией конструкции. Устанавливают часто в больших ванных комнатах, где нужен обогрев помещения. Этот вид радиаторов имеет хорошие теплотехнические свойства.</li>
-						<li>С горизонтальным подключением. Распространены в многоквартирных домах старого типа, где отопление и горячая вода идут в квартиру по одной трубе. Горизонтальный радиатор приобретают, чтобы не усложнять процесс установки.</li>
-					</ul>
-				</p>
-				<p>
-					Подключают изделия разными способами. Часто применяют метод подключения к стояку с горячей водой. Дело в том, что горячая вода циркулирует непрерывно, а отключается только на 2 недели при летней профилактике. А значит, в ванной круглогодично тепло. Подключение к отоплению – сезонное, поэтому такой способ используют реже. Также есть возможность подключения электрических полотенцесушителей компании «Маргроид» к электропитанию. Тогда радиатор не будет зависеть от сезонности или летней профилактики водоснабжения.<br><br>
-					При выборе учитывайте ряд факторов:
-				</p>
-				<ul>
-					<li>Конструкция радиатора. Материал должен быть прочным, так как изделие под постоянным давлением, на него воздействует вода, влажность. Чтобы избежать протечек, лучше покупать батареи из нержавеющей стали с покрытием из хрома, которые хорошо смотрятся в интерьере, отличаются долгим сроком эксплуатации.</li>
-					<li>Размеры конструкции. Прежде чем покупать полотенцесушитель, замерьте расстояние между осями трубы, к которой будете подключать прибор. Батарея должна идеально подходить по размерам, иначе монтаж значительно усложнится.</li>
-					<li>Допустимое давление. Нужно найти информацию об этом показателе. Обычное давление эксплуатации – 6 атмосфер.</li>
-				</ul>
-				<p>
-					Техническая тема – не ваш «конек»? Проконсультируйтесь у менеджеров интернет-магазина, которые порекомендуют подходящие варианты и фурнитуру для монтажа радиатора. Возможна доставка по Москве и за МКАД. Контакты для связи с операторами указаны на сайте.
-				</p>
-				<p>
-					<strong>Западная улица, стр 100 рабочий посёлок Новоивановское, Одинцовский городской округ (2 этаж, павильон B-71).</strong>
-				</p>
+                    <h1>{{ seo.name }}</h1>
+                    {{ seo.content|safe }}
 			</div>
 			<div class="row bottom-images">
+                {% for foto in foto_showroom %}
 				<div class="col-xl-6">
-					<img src="{% static 'img/showroom1.jpg' %}" class="img-fluid">
+					<img src="{{ foto.docfile.url }}" alt="{{ foto.altimg }}" class="img-fluid">
 				</div>
-				<div class="col-xl-6">
-					<img src="{% static 'img/showroom2.jpg' %}" class="img-fluid">
-				</div>
+                {% endfor %}
 			</div>
 		</div>
 	</div>
