--- a/templates/cart/delivery.html
+++ b/templates/cart/delivery.html
@@ -1,8 +1,8 @@
 {% extends 'layouts/base.html' %}
 {% load static %}
 
-{% block description %}<meta name="description" content="{{ delivery_description }}">{% endblock description %}
-{% block title %}{{ delivery_title }}{% endblock title %}
+{% block description %}<meta name="description" content="{{ delivery_page.description }}">{% endblock description %}
+{% block title %}{{ delivery_page.title }}{% endblock title %}
 
 {% block content %}
 
@@ -17,16 +17,18 @@
 			</div>
 			<div class="main-content">
 				<h1>Доставка</h1>
-				{% for del_type in delivery_types %}
-				<div class="row">
-					<div class="delivery-item-info col-xl-3 col-lg-3 col-md-4 col-sm-4">
-						<img src="{{ del_type.image.url }}" alt="" class="img-fluid">
+                {{ delivery_page.content }}
+
+                {% for benefit in delivery_foto %}
+                    <div class="row">
+                    <div class="delivery-item-info col-xl-3 col-lg-3 col-md-4 col-sm-4">
+                    <img src="{{ benefit.docfile.url }}" alt="{{ benefit.altimg }}" class="img-fluid">
+                    </div>
+                    <div class="col-xl-9 col-lg-9 col-md-8 col-sm-8 paragraph-item">
+						<p>{{ benefit.desc_img }}</p>
 					</div>
-					<div class="col-xl-9 col-lg-9 col-md-8 col-sm-8 paragraph-item">
-						<p>{{ del_type.description }}</p>
-					</div>
-				</div>
-				{% endfor %}
+                    </div>
+                {% endfor %}
 			</div>
 		</div>
 	</div>
