--- a/templates/product/product_detail.html
+++ b/templates/product/product_detail.html
@@ -29,13 +29,13 @@
 				<a href="{% url 'home:home-page' %}">Главная</a>
 				<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
 				{% if current_product.category.name == 'Комплектующие' %}
-				<a href="{% url 'components_view' %}">{{ current_product.category.name }}</a>
+				<a href="{% url 'components:components_view' %}">{{ current_product.category.name }}</a>
 				{% else %}
-				<a href="{% url 'category_detail_view' current_product.category.slug %}">{{ current_product.category.name }}</a>
+				<a href="{% url 'product:category_detail_view' current_product.category.slug %}">{{ current_product.category.name }}</a>
 				{% endif %}
 				<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
 				{% if current_product.sub_category %}
-				<a href="{% url 'subcategory_detail_view' current_product.category.slug current_product.sub_category.slug %}">{{ current_product.sub_category.name }}</a>
+				<a href="{% url 'product:subcategory_detail_view' current_product.category.slug current_product.sub_category.slug %}">{{ current_product.sub_category.name }}</a>
 				<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
 				{% endif %}
 				<span>{{ current_product.name }}</span>
@@ -150,7 +150,7 @@
 						<div class="col-xl-12 comments-section">
 							<div class="row header">
 								<p>Комментарии (0)</p>
-								<form method="POST" action="{% url 'add_comment_view' current_product.id %}" class="form-group">
+								<form method="POST" action="{% url 'product:add_comment_view' current_product.id %}" class="form-group">
 									{% csrf_token %}
 									<textarea placeholder="Оставьте свой комментарий...." class="form-control" name="comment" cols="100" rows="4" required></textarea>
 									{% if request.user.is_authenticated %}
@@ -182,9 +182,9 @@
 </div>
 
 <script type="text/javascript">
-	var add_to_cart_url = "{% url 'add_to_cart_view' %}";
-	var add_complect_to_cart = "{% url 'add_complect_to_cart_view' %}";
-	var select_product_color_url = "{% url 'select_product_color_view' %}";
+	var add_to_cart_url = "{% url 'cart:add_to_cart_view' %}";
+	var add_complect_to_cart = "{% url 'cart:add_complect_to_cart_view' %}";
+	var select_product_color_url = "{% url 'product:select_product_color_view' %}";
 </script>
 
 {% endblock content %}
